[package]
name = "magic-structure"
version = "0.1.0"
edition = "2021"

[lib]
name = "magic_structure"
path = "src/lib.rs"

[dependencies]
pinned-init = { version = "0.0.9", default-features = false }
rustix = { version = "1.0", features = ["thread", "process"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mutation_benchmarks"
harness = false
